refactor(BaseStockService): 优化游标分页查询逻辑
- 使用 getLast() 方法替代索引获取最后元素
- 添加页码计算和详细日志输出
- 修复分页统计日志格式
- 添加页面大小检查提前退出逻辑
- 更新总数量统计显示